tests/snapshots/analyze__everything_is_meaningless_except_div_mod-2.snap
---
source: tests/analyze.rs
assertion_line: 273
expression: live_ranges
---
rsp          enter:
┊              mov _x, 1
┊   _x         mov _y, 2
┊   ●   _y     add _y, _x
┊       ●      mov rax, _y
┊       rax    cqo
┊   rdx D      idiv 2
┊              mov _x, rax
┊              add _x, 1
┊              add _x, _y
┊              jmp exit
┊            exit:
D              ret

