tests/snapshots/analyze__everything_is_meaningless_except_div_mod.snap
---
source: tests/analyze.rs
assertion_line: 207
expression: live_variables
---

 everything_is_meaningless_except_div_mod

            +-----------------+
            |     enter:      |
            | {rsp}           |
            | mov _x, 1       |
            | {rsp, _x}       |
            | mov _y, 2       |
            | {rsp, _x, _y}   |
            | add _y, _x      |
            | {rsp, _y}       |
            | mov rax, _y     |
            | {rax, rsp}      |
            | cqo             |
            | {rax, rdx, rsp} |
            | idiv 2          |
            | {rsp}           |
            | mov _x, rax     |
            | {rsp}           |
            | add _x, 1       |
            | {rsp}           |
            | add _x, _y      |
            | {rsp}           |
            | jmp exit        |
            | {rsp}           |
            +-----------------+
              |
              |
              v
            +-----------------+
            |      exit:      |
            | {rsp}           |
            | ret             |
            | {}              |
            +-----------------+

