tests/snapshots/analyze__pass_one_receieve_one.snap
---
source: tests/analyze.rs
assertion_line: 105
expression: live_variables
---

 pass_one_receieve_one

   +----------------+
   |     enter:     |
   | {rsp}          |
   | mov _x, 5      |
   | {rsp, _x}      |
   | mov rdi, _x    |
   | {rsp, rdi}     |
   | call black_box |
   | {rax, rsp}     |
   | mov _x, rax    |
   | {rsp, _x}      |
   | mov rax, _x    |
   | {rax, rsp}     |
   | jmp exit       |
   | {rax, rsp}     |
   +----------------+
     |
     |
     v
   +----------------+
   |     exit:      |
   | {rax, rsp}     |
   | ret            |
   | {}             |
   +----------------+

