tests/snapshots/analyze__propagate_liveness_memory-2.snap
---
source: tests/analyze.rs
assertion_line: 223
expression: live_ranges
---
rsp      enter:
|        mov _x, 1
|   _x   mov _x, [_x]
|   ●    mov rax, _x
|   rax  jmp exit
|   |    exit:
●   ●    ret

